refactor: don't wrap ScreenRec procs
The ScreenRec proc wrapping jungle is a fountain of problems, making the code flow very hard to understand and debug.
Instead, we should have clear direct call chains in DDX/drivers and separate notification lists (callbacks which are designed to be run independently). Once finished, nobody (outside some special DIX helpers) should ever call these vectors directly, and they should only be set once - in the DDX/drivers (or their helpers, eg. fb)
See: https://lists.x.org/archives/xorg-devel/2024-September/059319.html
--
Current work items:
Edited by Enrico Weigelt, metux IT consult .