exa/exa_classic.c
@@ -96,10 +96,7 @@ exaCreatePixmap_classic(ScreenPtr pScreen, int w, int h, int depth,
     pExaPixmap->fb_size = pExaPixmap->fb_pitch * h;
 
     if (pExaPixmap->fb_pitch > 131071) {
-        swap(pExaScr, pScreen, DestroyPixmap);
-        if (pScreen->DestroyPixmap)
-            pScreen->DestroyPixmap(pPixmap);
-        swap(pExaScr, pScreen, DestroyPixmap);
+        dixDestroyPixmap(pPixmap, 0);
         return NULL;
     }
 
@@ -109,10 +106,7 @@ exaCreatePixmap_classic(ScreenPtr pScreen, int w, int h, int depth,
                                        pScreen, pPixmap);
 
     if (pExaPixmap->pDamage == NULL) {
-        swap(pExaScr, pScreen, DestroyPixmap);
-        if (pScreen->DestroyPixmap)
-            pScreen->DestroyPixmap(pPixmap);
-        swap(pExaScr, pScreen, DestroyPixmap);
+        dixDestroyPixmap(pPixmap, 0);
         return NULL;
     }
 
@@ -218,6 +212,8 @@ exaDestroyPixmap_classic(PixmapPtr pPixmap)
 
     if (pPixmap->refcnt == 1) {
         ExaPixmapPriv(pPixmap);
+        if (!pExaPixmap) // we're called on an error path
+            goto out;
 
         exaDestroyPixmap(pPixmap);
 
@@ -235,6 +231,7 @@ exaDestroyPixmap_classic(PixmapPtr pPixmap)
         RegionUninit(&pExaPixmap->validFB);
     }
 
+out:
     swap(pExaScr, pScreen, DestroyPixmap);
     if (pScreen->DestroyPixmap)
         ret = pScreen->DestroyPixmap(pPixmap);
