exa/exa_mixed.c
@@ -249,6 +249,8 @@ exaDestroyPixmap_mixed(PixmapPtr pPixmap)
 
     if (pPixmap->refcnt == 1) {
         ExaPixmapPriv(pPixmap);
+        if (!pExaPixmap)
+            goto out; // we're called on an error path
 
         exaDestroyPixmap(pPixmap);
 
@@ -266,6 +268,7 @@ exaDestroyPixmap_mixed(PixmapPtr pPixmap)
         }
     }
 
+out:
     swap(pExaScr, pScreen, DestroyPixmap);
     if (pScreen->DestroyPixmap)
         ret = pScreen->DestroyPixmap(pPixmap);
